# starwinds-readplt

./: .gitattributes  .gitignore  LICENSE  PYPI.md  README.md  RELEASE_CHECKLIST.md  environment.yml  pyproject.toml  read2d.py  setup.py
.githooks/: pre-commit
.github/workflows/: python-package.yml
batread/: __init__.py  basicplot.py  cli_plots.py  dataset.py  read_dat.py  read_plt.py  read_plt_ondemand.py
examples/: 3d__var_1_n00000000.plt
my_package/: _version.py  basicplot.py  cli_plots.py  dataset.py  quick_plots.py  read_dat.py  read_plt.py
sample_data/: x=0_var_2_n00000000.plt
starwinds_readplt/: __init__.py  _version.py  basicplot.py  cli_plots.py  dataset.py  quick_plots.py  read_dat.py  read_plt.py
tests/: conftest.py  octree.ipynb  test_cli.py  test_dataset.py  test_quick_plots.py  test_reader.py  test_reader_3d.py
