[project]
name = "batread"
description = "Read SWMF/BATSRUS .plt and .dat files"
version = "1.0"
dependencies = ["numpy",]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
graphics = ["matplotlib",]
tests = ["pytest", "pytest-console-scripts", "matplotlib",]

[project.scripts]
sw-quick = "batread.cli_plots:quick_plot"
