[project]
name = "batread"
description = "Read BATSRUS output and related Tecplot ASCII .dat and binary .plt datasets"
keywords = ["BATSRUS", "BATS-R-US", "SWMF", "Tecplot", "plt", "dat"]
version = "1.0"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["numpy",]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
graphics = ["matplotlib",]
tests = ["black", "pytest", "pytest-console-scripts", "matplotlib",]

[project.scripts]
bat-quick = "batread.cli_plots:quick_plot"

[tool.black]
line-length = 88
target-version = ["py39"]
